# plugin-examples

./: .gitignore  Cargo.toml  README.md  testing.nu  version.js
.github/workflows/: ci.yml
javascript/: version.js
javascript/nu_plugin_node_example/: nu_plugin_node_example.cmd  nu_plugin_node_example.js
nushell/: nu_plugin_nu_example.nu  version.nu
nushell/nu_plugin_nu_example/: nu_plugin_nu_example.cmd  nu_plugin_nu_example.nu  test_nu_plugin_nu_example.nu
python/: nu_plugin_python_example.py  version.py
python/nu_plugin_python_example/: nu_plugin_python_example.cmd  nu_plugin_python_example.py  test_nu_plugin_node_example.nu
rust/nu_plugin_custom_values/: Cargo.toml  test_nu_plugin_custom_values.nu
rust/nu_plugin_custom_values/src/: generate.rs  generate2.rs  main.rs  update.rs
rust/nu_plugin_example/: Cargo.toml  test_nu_plugin_example.nu
rust/nu_plugin_example/src/commands/: collect_bytes.rs  for_each.rs  sum.rs
