[workspace]
resolver = "3"
members = [
  "rust/nu_plugin_custom_values",
  "rust/nu_plugin_example",
]

[workspace.dependencies]
nu-plugin = { version = "0.105", git = "https://github.com/nushell/nushell.git" }
nu-protocol = { version = "0.105", git = "https://github.com/nushell/nushell.git" }
nu-plugin-test-support = { version = "0.105", git = "https://github.com/nushell/nushell.git" }
nu-cmd-lang = { version = "0.105", git = "https://github.com/nushell/nushell.git" }

serde = "1.0"
